# Distribution_Mechanism_POSIX-Threads

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/Handlers/: handler.cpp  handlers.h
src/Packet/: packet.h
src/pcapReader/: pcapreader.cpp  pcapreader.h
